--- a/config.json
+++ b/config.json
@@ -1,3 +1,25 @@
 {
-  "prefix": "+"
-}
+  "prefix": "+",
+  "reactionRole": {
+  "861234026512646144": {
+      "emojis": [{
+          "id": "✅",
+          "roles": "861230562365931571"
+      }]
+  },
+  "861586729399353375": {
+      "removable": true,
+      "emojis": [{
+          "name": "💎",
+          "roles": "861303695462236171"
+      }, {
+          "name": "⚡",
+          "roles": "861303534329921557"
+      }, {
+         "name": "🎉",
+          "roles": "861299160821268490"
+      }, {
+         "name": "📦",
+          "roles": "861298910612946985"
+      }
+    ]}}}
